# morphologist-gpl

./: CMakeLists.txt  README.md  project_info.cmake  t1mri-gpl.bcg  t1mri.bcg
brainvisa/toolboxes/morphologist/: initialization.py  morphologist.minf  morphologist.py  startup.py  t1mri.py
brainvisa/toolboxes/morphologist/processes/: category_documentation.minf  morphologist-ui.procdoc  morphologist-ui.py  morphologist-ui_database.procdoc  morphologist-ui_database.py  morphologist.procdoc  morphologist.py  morphologist_capsul.py  morphologist_parallel.py  morphologist_qc_table.procdoc  morphologist_qc_table.py
brainvisa/toolboxes/morphologist/types/: anatomy.py  sulci.py
brainvisa/toolboxes/t1mri/: startup.py  t1mri.minf  t1mri.py
brainvisa/toolboxes/t1mri/processes/: category_documentation.minf  morphologist.procdoc  morphologist.py
brainvisa/toolboxes/t1mri/types/: anatomy.py  sulci.py
cmake/: morphologist-gpl-config.cmake.in  t1mri-gpl-config.cmake.in
doc/: morphologist.odp
doc/webgl_demo/: glMatrix.js  mesh2js.py  webgl.html  webgl.js
doc/webgl_demo/data/: CMD  chaos_left.mesh  cube.js  triangle.js
doc/webgl_demo/shaders/blinn_phong_light_model/: flat_shader.frag  flat_shader.vert  gouraud_shader.vert  phong_shader.frag
doc/webgl_demo/shaders/no_light_model/: color_shader.vert
doc/webgl_demo/shaders/phong_light_model/: flat_shader.frag  gouraud_shader.frag  gouraud_shader.vert  phong_shader.frag
python/: morphologistSimp.py  morphologist_pipeline.py
python/brainvisa/checkbase/: __init__.py  check.py  report.py
python/brainvisa/checkbase/diskusage/: __init__.py  check.py  diskusage_template.html  freesurfer_hierarchy_template.html  generalinformation_template.html  hierarchy_template.html  pdf.py  report.py  snapshots_hierarchy_template.html
python/brainvisa/checkbase/hierarchies/: __init__.py  catishared.py  check.py  checkbase.py  freesurfer.py  general.py  morphologist.py  snapshots.py  spm.py
python/brainvisa/checkbase/templates/: directories_template.html  freesurfer_hierarchy_template.html  generalinfo_template.html  hierarchies_template.html  hierarchy_template.html  snapshots_hierarchy_template.html
python/brainvisa/checkbase/tests/: README.txt  api_monitor.html  monitor.py  pdf.py
python/brainvisa/configuration/: sulci_configuration.py
python/brainvisa/morphologist/: morpho_bids_hierarchy.py  morpho_hierarchy.py
python/brainvisa/morphologist/morphometry/: global_sulc_morpho.py
python/brainvisa/morphologist/qt4gui/: histo_analysis_editor.py  histo_analysis_widget.py
python/brainvisa/snapbase/: __init__.py  __main__.py
python/brainvisa/snapbase/snapbase/: __init__.py  diskItemBrowser.py  interface.py  main.py  poster.py  snapbase.py
python/brainvisa/tests/: test_morphologist.py
python/morphologist/: process.py
python/morphologist/capsul/: BaladinNormalizationPipeline.py  BaladinNormalizationToAims.py  BrainSegmentation.py  FSLnormalizationPipeline.py  FSLnormalizationToAims.py  GreyWhiteClassificationHemi.py  GreyWhiteMesh.py  GreyWhiteTopology.py  NobiasHistoAnalysis.py  Normalization_Baladin.py  Normalization_FSL_reinit.py  Normalization_SPM_reinit.py  SPMnormalizationPipeline.py  SPMsn3dToAims.py  SplitBrain.py  T1BiasCorrection.py  TalairachTransformation.py  TalairachTransformationFromNormalization.py  __init__.py  __main__.py  acpcOrNormalization.py  corticalfoldsgraph.py  fslnormalization.py  headMesh.py  hemispheremesh.py  import_t1_mri.py  morpho_intersubject_status.py  morphologist.py  morphologist_simple.py  morphologist_viewer.py  normalizationPipeline.py  normalization_aimsmiregister.py  normalization_skullstripped.py  preparesubject.py  recognition.py  recognitionGeneral.py  reorientAnatomy.py  skullstripping.py  spam_recognition.py  spam_recognitionglobal.py  (+7 more)
python/morphologist/capsul/axon/: __init__.py  acpcorientation.py  aimsconverter.py  axonmorphologist.py  baladinnormalizationpipeline.py  baladinnormalizationtoaims.py  biascorrection.py  brainorientation.py  brainsegmentation.py  brainvolumes.py  corticalfoldsgraphthickness.py  corticalfoldsgraphupgradefromold.py  foldgraphupgradestructure.py  fslnormalizationpipeline.py  fslnormalizationtoaims.py  greywhiteclassificationhemi.py  greywhitemesh.py  greywhitetopology.py  histoanalysis.py  importt1mri.py  morpho_report.py  morphologistprocess.py  normalization.py  normalization_aimsmiregister.py  normalization_baladin.py  normalization_fsl_reinit.py  normalization_spm_reinit.py  normalization_t1_spm12_reinit.py  normalization_t1_spm8_reinit.py  normalizationskullstripped.py  pialmesh.py  reorientanatomy.py  scalpmesh.py  skullstripping.py  spam_recognition.py  spam_recognitionlocal.py  spam_recognitionmarkov.py  splitbrain.py  spmnormalizationpipeline.py  spmsn3dtoaims.py  (+13 more)
python/morphologist/capsul/sulci_manip/: graph_pointcloud_label.py
python/morphologist/process/: bias_correction.py  compute_brain_mask.py  head_mesh.py  histo_analysis.py  morphologist.py  morphologist_simplified.py  split_brain_mask.py  spm_normalization.py  talairach_transformation.py
python/morphologist/qc/: global_qc_table.py
python/morphologist/sulpated/: __main__.py  merge_annotations.py  specs.txt  sulpated_data.py  sulpated_gui.py
python/morphologist/tests/: test_morphologist_capsul.py  test_morphologist_capsul_perf.py
python/morphologist/viewer/: show_brain_mask.py  show_hemi.py  show_histo.py  show_label_image.py  show_t1mri_nobias.py  show_volume.py  show_white_matter.py  show_white_ridges.py
share/foms/: README.rst  morphologist-auto-1.0.json  morphologist-auto-nonoverlap1.0.json  morphologist-bids-2.0.json  morphologist-bids-2.0.json.bak  morphologist-bids-auto-1.0.json  raw-bids-1.0.json
share/morphologist/icons/: lock_open.xcf  pattern.xcf  sulci.xcf
sphinx/: .gitignore  conf.py  index.rst
sphinx/dev_doc/: conf.py  index.rst
sphinx/process_docs/morphologist/: index.rst
sphinx/process_docs/process/: index.rst
sphinx/user_doc/: changelog.md  conf.py  index.rst  sulpated.rst
sphinx/user_doc/_static/: custom.css
(+593 files in other folders)
